samples/_failures_safe/1761275893_dc180f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7e5771e2.c: In function ‘main’:
./samples/SAFE/__tmp_7e5771e2.c:152:41: error: expected ‘)’ at end of input
  152 |                     print_matrix(&result
      |                                 ~       ^
      |                                         )
./samples/SAFE/__tmp_7e5771e2.c:152:21: error: too few arguments to function ‘print_matrix’
  152 |                     print_matrix(&result
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_7e5771e2.c:55:6: note: declared here
   55 | void print_matrix(const Matrix* mat, const char* name) {
      |      ^~~~~~~~~~~~
./samples/SAFE/__tmp_7e5771e2.c:152:21: error: expected declaration or statement at end of input
  152 |                     print_matrix(&result
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_7e5771e2.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7e5771e2.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7e5771e2.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7e5771e2.c:152:21: error: expected declaration or statement at end of input
